# matlab-ai-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/: basic_simulation.py
src/: agent.py  cli.py  engine.py  llm.py
src/utils/: error_learner.py  logger.py  prompt_generator.py
tests/unit/: test_agent.py  test_cli.py  test_engine.py  test_llm.py  test_prompt_generator.py
